...
    var body: some View {
        NavigationStack{
            Form{
                // Group title Section 1
                Section("Group Name"){
                    TextField("e.g Work", text: $groupName)
                        .accessibilityIdentifier("GroupNameTextField")
                }
                
                //Section 2 symbol icon
                Section("Select Icon"){
                    LazyVGrid(columns: [GridItem(.adaptive(minimum: 40))]) {
                        ForEach(icons, id: \.self) { icon in
...
                    Button("Save") {
                        let newGroup = TaskGroup(title: groupName, symbolName: selectedIcon, tasks: [])
                        
                        onSave(newGroup)
                        dismiss()
                    }
                    .accessibilityIdentifier("SaveGroupButton")
                }
            }
        }
    }
}

