...
                ToolbarItem(placement: .primaryAction) {
                    Button {
                        isShowingAddGroup = true
                    } label: {
                        Image(systemName: "plus")
                    }
                    .accessibilityIdentifier("AddGroupButton")
                }
            }
        //    .navigationBarHidden(true)
        } detail: {
            
            //Show the selected group found by the index and display it on the detailview
...
